fixed distorted images

--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,7 @@ ul li {
   font-weight: 400;
   font-size: 2em;
   line-height: 1.5em;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 }
 
 .othernames--mini {
@@ -111,7 +111,7 @@ ul li {
   justify-content: space-between;
   height: 80px;
   margin-bottom: 30px;
-  padding: 10px 5%;
+  padding: 10px 10%;
 }
 
 .nav {
@@ -178,6 +178,7 @@ ul li {
 }
 .header-end .cart-icon {
   position: relative;
+  cursor: pointer;
 }
 .header-end .cart-icon .item-count {
   position: absolute;
@@ -217,7 +218,7 @@ ul li {
 }
 
 .category {
-  width: 90%;
+  width: 80%;
   margin: 0px auto;
   transition: 0.5s ease-out;
 }
@@ -238,7 +239,7 @@ ul li {
 
 .product-tile {
   width: 100%;
-  height: 70vh;
+  height: 56vh;
   padding: 1em;
   background-color: #fff;
   position: relative;
@@ -320,7 +321,7 @@ ul li {
 .pdp {
   position: relative;
   display: flex;
-  width: 90%;
+  width: 80%;
   margin: 0px auto;
   margin-top: 70px;
   z-index: 1;
@@ -329,14 +330,14 @@ ul li {
   display: flex;
   flex-direction: column;
   margin-right: 3%;
-  width: 8vw;
+  width: 4.8vw;
 }
 .pdp__all-images img {
   width: 100%;
-  height: 12vh;
+  height: 80px;
   margin-bottom: 10px;
 }
-.pdp__all-images__shade {
+.pdp__all-images img:hover {
   box-shadow: 2px 4px 5px #1d1f22;
 }
 .pdp__details {
@@ -344,8 +345,8 @@ ul li {
   display: flex;
 }
 .pdp__details__image {
-  width: 60%;
-  height: 70vh;
+  width: 42.5vw;
+  height: 511px;
   margin-right: 10%;
 }
 .pdp__details__description {
@@ -428,7 +429,7 @@ ul li {
 }
 
 .cart {
-  width: 90%;
+  width: 80%;
   margin: 0px auto;
 }
 .cart__title {
@@ -442,13 +443,20 @@ ul li {
   text-align: center;
 }
 
+.cart-item-line {
+  background-color: #e5e5e5;
+  width: 100%;
+  height: 1px;
+  margin-bottom: 10px;
+}
+
 .cart-item {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  min-height: 25vh;
-  width: 85%;
-  border-top: 0.1px solid #e5e5e5;
+  height: 185px;
+  width: 76vw;
+  margin-bottom: 25px;
 }
 .cart-item__details {
   width: 50%;
@@ -457,6 +465,7 @@ ul li {
 .cart-item--mini {
   border: none;
   width: 100%;
+  min-height: 137px;
 }
 .cart-item--mini__details {
   flex: 1;
@@ -465,12 +474,15 @@ ul li {
   flex: 4.5;
   margin-left: 20px;
 }
+.cart-item--mini .cart-count__img-switcher {
+  width: 7.2vw;
+}
 
 .cart-count {
   display: flex;
   justify-content: space-between;
   height: 23vh;
-  width: 20%;
+  width: 13.7vw;
 }
 .cart-count__btn-grp {
   height: 100%;
@@ -512,7 +524,7 @@ ul li {
 }
 .cart-count__img-switcher {
   position: relative;
-  width: 80%;
+  width: 9.7vw;
 }
 .cart-count__img-switcher .cart-count__img-container {
   width: 100%;
@@ -569,7 +581,7 @@ ul li {
   position: absolute;
   top: 0px;
   right: 3%;
-  width: 25%;
+  width: 22.5vw;
   padding: 10px;
   z-index: 5;
   overflow: auto;
