--- a/src/style.scss
+++ b/src/style.scss
@@ -74,7 +74,7 @@ ul {
   font-weight: 400;
   font-size: 2em;
   line-height: 1.5em;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 }
 .othernames--mini {
   font-weight: 300;
@@ -113,7 +113,7 @@ ul {
   justify-content: space-between;
   height: 80px;
   margin-bottom: 30px;
-  padding: 10px 5%;
+  padding: 10px 10%;
 }
 
 .nav {
@@ -179,6 +179,7 @@ ul {
   }
   .cart-icon {
     position: relative;
+    cursor: pointer;
     .item-count {
       position: absolute;
       top: -6px;
@@ -217,7 +218,7 @@ ul {
 }
 
 .category {
-  width: 90%;
+  width: 80%;
   margin: 0px auto;
   transition: 0.5s ease-out;
   &__name {
@@ -238,7 +239,7 @@ ul {
 
 .product-tile {
   width: 100%;
-  height: 70vh;
+  height: 56vh;
   padding: 1em;
   background-color: #fff;
   position: relative;
@@ -321,7 +322,7 @@ ul {
 .pdp {
   position: relative;
   display: flex;
-  width: 90%;
+  width: 80%;
   margin: 0px auto;
   margin-top: 70px;
   z-index: 1;
@@ -329,13 +330,13 @@ ul {
     display: flex;
     flex-direction: column;
     margin-right: 3%;
-    width: 8vw;
+    width: 4.8vw;
     img {
       width: 100%;
-      height: 12vh;
+      height: 80px;
       margin-bottom: 10px;
     }
-    &__shade {
+    img:hover {
       box-shadow: 2px 4px 5px $secondary-color;
     }
   }
@@ -343,8 +344,8 @@ ul {
     width: 70%;
     display: flex;
     &__image {
-      width: 60%;
-      height: 70vh;
+      width: 42.5vw;
+      height: 511px;
       margin-right: 10%;
     }
     &__description {
@@ -429,7 +430,7 @@ ul {
 }
 
 .cart {
-  width: 90%;
+  width: 80%;
   margin: 0px auto;
   &__title {
     text-transform: uppercase;
@@ -442,14 +443,20 @@ ul {
     text-align: center;
   }
 }
+
+.cart-item-line {
+  background-color: #e5e5e5;
+  width: 100%;
+  height: 1px;
+  margin-bottom: 10px;
+}
 .cart-item {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  min-height: 25vh;
-  width: 85%;
-  border-top: 0.1px solid #e5e5e5;
-
+  height: 185px;
+  width: 76vw;
+  margin-bottom: 25px;
   &__details {
     width: 50%;
   }
@@ -457,19 +464,23 @@ ul {
 .cart-item--mini {
   border: none;
   width: 100%;
+  min-height: 137px;
   &__details {
     flex: 1;
   }
   .cart-count {
     flex: 4.5;
     margin-left: 20px;
+    &__img-switcher {
+      width: 7.2vw;
+    }
   }
 }
 .cart-count {
   display: flex;
   justify-content: space-between;
   height: 23vh;
-  width: 20%;
+  width: 13.7vw;
   &__btn-grp {
     height: 100%;
     width: 18%;
@@ -510,7 +521,7 @@ ul {
   }
   &__img-switcher {
     position: relative;
-    width: 80%;
+    width: 9.7vw;
     .cart-count__img-container {
       width: 100%;
       height: 100%;
@@ -568,7 +579,7 @@ ul {
   position: absolute;
   top: 0px;
   right: 3%;
-  width: 25%;
+  width: 22.5vw;
   padding: 10px;
   z-index: 5;
   overflow: auto;
